--- a/css/home.css
+++ b/css/home.css
@@ -104,4 +104,4 @@ span {
   .logo-container {
     width: 713px;
   }
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=home.css.map */
