--- a/css/blog.css
+++ b/css/blog.css
@@ -18,8 +18,13 @@ aside:nth-of-type(2) {
   padding-bottom: 1em;
 }
 
-#blog-header p {
+#blog-header aside {
   font-style: italic;
+}
+
+#blog-header p:nth-child(2n+2) {
+  margin-top: 2em;
+  text-align: justify;
 }
 
 h4 {
@@ -30,7 +35,6 @@ h4 {
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-size: 1.3em;
   margin-top: 1em;
 }
 
@@ -42,13 +46,15 @@ h4 {
 
 #blog-post a {
   border: solid 2px white;
+  border-radius: 10%;
   background-color: rgba(0, 0, 0, 0.8);
   padding: 0.4em;
   margin: 1em;
   display: flex;
   flex-direction: column;
   text-decoration: none;
-  color: orange;
+  color: rgb(235, 165, 34);
+  overflow: hidden;
 }
 
 #blog-post img {
