--- a/css/projects.css
+++ b/css/projects.css
@@ -1,4 +1,4 @@
-@import url(global.css);
+@import url(/css/global.css);
 @-webkit-keyframes review-cycle {
   0%, 100% {
     content: "Bananas were going old and stale (and brown). Sam's site has turned them ripe again! - Bananaguy1984";
@@ -209,11 +209,9 @@ main {
 }
 
 #muse-images img {
-  margin: 0.5em 1em;
-  width: 100%;
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
+  padding: 0.5em 0;
+  padding-right: 1em;
+  width: 90%;
 }
 
 #muse-images p {
@@ -236,11 +234,12 @@ main {
 #resume a:nth-child(2n+1) {
   border: black solid 2px;
   background-color: white;
-  padding: 0.4em;
+  padding: 0.2em;
   text-align: center;
   width: 35%;
   text-decoration: none;
   color: lightseagreen;
+  font-size: 0.9em;
 }
 
 #resume a:nth-child(2) {
@@ -250,7 +249,7 @@ main {
   min-width: 20px;
 }
 
-@media only screen and (min-device-width: 600px) and (max-device-width: 899px) {
+@media only screen and (min-device-width: 600px) {
   #box-container {
     display: flex;
     flex-flow: row wrap;
@@ -262,30 +261,24 @@ main {
   #stretch-box {
     margin-bottom: 3em;
   }
+  #resume a:nth-child(2n+1) {
+    padding: 0.5em;
+  }
+}
+@media only screen and (min-device-width: 600px) and (max-device-width: 899px) {
   #reviews {
     min-height: 140px;
   }
 }
 @media only screen and (min-device-width: 900px) {
-  #box-container {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-  }
-  #box-container div {
-    margin-top: 2em;
-  }
   #reviews {
     min-height: 145px;
-  }
-  #stretch-box {
-    margin-bottom: 3em;
   }
   #muse-images {
     flex-flow: row wrap;
     align-items: center;
   }
   #muse-images img {
-    display: inline-block;
+    width: 100%;
   }
 }/*# sourceMappingURL=projects.css.map */
