--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -17,26 +17,26 @@ aside:nth-of-type(2){
     padding-bottom: 1em;
 }
 
-#blog-header p {
+#blog-header aside {
     font-style: italic;
+    // color:rgb(235, 218, 34)
+}
+
+#blog-header p:nth-child(2n+2){
+    margin-top: 2em;
+    text-align: justify;
 }
 
 h4{
-    margin-top: 2em;;
+    margin-top: 2em;
 }
 
 #blog-latest {
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: 1.3em;
     margin-top: 1em;
 }
-
-// #scrollable-blog {
-    // height: 20vw; width:100%; overflow: scroll; border: 1px solid #444; padding: 5px;
-    // text-align: left;
-// }
 
 #blog-post {
     display: flex;
@@ -46,14 +46,15 @@ h4{
 
 #blog-post a {
     border: solid 2px white;
-    // border-radius: 20%;
+    border-radius: 10%;
     background-color: rgb(0, 0, 0, 0.8);
     padding: 0.4em;
     margin: 1em;
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    color: orange;
+    color: rgb(235, 165, 34);
+    overflow: hidden;
 }
 
 #blog-post img {
