--- a/scss/global.scss
+++ b/scss/global.scss
@@ -12,12 +12,7 @@ body {
     font-family: 'Merriweather', serif, Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     font-size: clamp(0.8em, 6vw, 1.2em);
-    // background: lightseagreen;
 }
-
-// header {
-
-// }
 
 .top-nav {
     display: flex;
@@ -43,9 +38,7 @@ p {
 .top-nav a{
     color: rgb(72, 0, 255);
     margin-left: 0.5em;
-    // font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     opacity: 1;
-    // font-size: 0.75em
 }
 
 a{
@@ -61,15 +54,25 @@ main {
     margin-top: 30px;
 }
 
+.socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: lightseagreen;
+    text-align: center;
+    padding: 0em 0.2em;
+}
+
+.socials p {
+    margin: 0.5em 0;
+}
+
 .logo-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     background: white;
-    // align-items: end;
-    // background: white;
     width: 80%;
-    // flex-wrap: wrap
 }
 
 .logo {
